# rknn_backend

./: CMakeLists.txt  README.md
cmake/: TritonRknnBackendConfig.cmake.in
doc/: local_build_from_docker  local_build_from_docker.md  local_build_from_source.md
examples/: test_multi_input.py  test_single_input.py  test_yolov5.py
examples/ensemble_mobilenet/: test_ensemble_mobilenet.py
examples/models/ensemble_mobilenet/: config.pbtxt
examples/models/multi_input/: config.pbtxt
examples/models/preprocess/: config.txt
examples/models/preprocess/1/: model.py
examples/models/single_input/: config.pbtxt
examples/models/yolov5/: config.pbtxt
examples/multi_input/: test_multi_input.py
examples/yolov5/: test_yolov5.py
rknpu2/include/: rknn_api.h
src/: rknn.cc  rknn_utils.cc  rknn_utils.h
